--- a/src/partials/vite-promo.html
+++ b/src/partials/vite-promo.html
@@ -10,25 +10,25 @@
         title="Vite.js  build tool"
       >
         <!-- Path to images as from index.html file -->
-        <img
-          class="pic"
-          src="img/vite-logo.png"
-          alt="Vite logo"
-          width="640"
-          height="640"
-        />
-      </a>
-    </div>
-    <h1 class="main-title">
-      <span class="main-title-gradient">Vite</span>
-      Template by
+        <!-- <img -->
+          <!-- class="pic" -->
+          <!-- src="img/vite-logo.png" -->
+          <!-- alt="Vite logo" -->
+          <!-- width="640" -->
+          <!-- height="640" -->
+        <!-- /> -->
+      <!-- </a> -->
+    <!-- </div> -->
+    <!-- <h1 class="main-title"> -->
+      <!-- <span class="main-title-gradient">Vite</span> -->
+      <!-- Template by -->
       <a
         class="main-title-link"
         href="https://github.com/goitacademy/vanilla-app-template"
         target="_blank"
         rel="noopener noreferrer"
       >
-        GoIT
+        <!-- GoIT -->
       </a>
     </h1>
   </div>
